// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Ian Entities createAfterEventLocationEntities creates entities 1`] = `
Array [
  Entity {
    "_availability": undefined,
    "_billboard": BillboardGraphics {
      "_alignedAxis": undefined,
      "_alignedAxisSubscription": undefined,
      "_color": Object {
        "_value": Object {
          "alpha": 0,
        },
        "getValue": [MockFunction],
      },
      "_colorSubscription": undefined,
      "_definitionChanged": Event {
        "_insideRaiseEvent": false,
        "_listeners": Array [
          [Function],
        ],
        "_scopes": Array [
          [Circular],
        ],
        "_toRemove": Array [],
      },
      "_disableDepthTestDistance": undefined,
      "_disableDepthTestDistanceSubscription": undefined,
      "_distanceDisplayCondition": undefined,
      "_distanceDisplayConditionSubscription": undefined,
      "_eyeOffset": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": true,
        "_hasEquals": true,
        "_value": Cartesian3 {
          "x": 0,
          "y": 0,
          "z": -11,
        },
      },
      "_eyeOffsetSubscription": [Function],
      "_height": undefined,
      "_heightReference": undefined,
      "_heightReferenceSubscription": undefined,
      "_heightSubscription": undefined,
      "_horizontalOrigin": Object {
        "_value": 0,
        "getValue": [MockFunction],
      },
      "_horizontalOriginSubscription": undefined,
      "_image": Object {
        "_value": "data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20id%3D%22selected_event_circle%22%20data-name%3D%22Selected%20Event%20Circle%22%20width%3D%22168%22%20height%3D%22168%22%20viewBox%3D%220%200%20168%20168%22%3E%3Cdefs%3E%3Cfilter%20id%3D%22Ellipse_69%22%20x%3D%220%22%20y%3D%220%22%20width%3D%22168%22%20height%3D%22168%22%20filterUnits%3D%22userSpaceOnUse%22%3E%3CfeOffset%20dy%3D%228%22%3E%3C%2FfeOffset%3E%3CfeGaussianBlur%20stdDeviation%3D%226%22%20result%3D%22blur%22%3E%3C%2FfeGaussianBlur%3E%3CfeFlood%20flood-opacity%3D%220.596%22%3E%3C%2FfeFlood%3E%3CfeComposite%20operator%3D%22in%22%20in2%3D%22blur%22%3E%3C%2FfeComposite%3E%3CfeComposite%20in%3D%22SourceGraphic%22%3E%3C%2FfeComposite%3E%3C%2Ffilter%3E%3C%2Fdefs%3E%3Cg%20id%3D%22Group_704%22%20data-name%3D%22Group%20704%22%20transform%3D%22translate(-1045%20-425)%22%3E%3Cg%20id%3D%22Group_705%22%20data-name%3D%22Group%20705%22%20transform%3D%22translate(1063%20435)%22%3E%3Cg%20transform%3D%22matrix(1%2C%200%2C%200%2C%201%2C%20-18%2C%20-10)%22%20filter%3D%22url(%23Ellipse_69)%22%3E%3Ccircle%20id%3D%22Ellipse_69-2%22%20data-name%3D%22Ellipse%2069%22%20cx%3D%2266%22%20cy%3D%2266%22%20r%3D%2266%22%20transform%3D%22translate(18%2010)%22%20fill%3D%22%234087cb%22%20style%3D%22fill-opacity%3A0.35%22%3E%3C%2Fcircle%3E%3C%2Fg%3E%3Cg%20id%3D%22Group_706%22%20data-name%3D%22Group%20706%22%20transform%3D%22translate(14.839%2014.839)%22%3E%3Ccircle%20id%3D%22Ellipse_70%22%20data-name%3D%22Ellipse%2070%22%20cx%3D%2247%22%20cy%3D%2247%22%20r%3D%2247%22%20transform%3D%22translate(4.161%204.161)%22%20fill%3D%22%23fff%22%20style%3D%22fill-opacity%3A0.35%3Bstroke-opacity%3A0.35%22%3E%3C%2Fcircle%3E%3Cpath%20id%3D%22Ellipse_70_-_Outline%22%20data-name%3D%22Ellipse%2070%20-%20Outline%22%20d%3D%22M51.111%2C10.222A40.888%2C40.888%2C0%2C1%2C0%2C92%2C51.111%2C40.935%2C40.935%2C0%2C0%2C0%2C51.111%2C10.222M51.111%2C0A51.111%2C51.111%2C0%2C1%2C1%2C0%2C51.111%2C51.111%2C51.111%2C0%2C0%2C1%2C51.111%2C0Z%22%20transform%3D%22translate(0%200)%22%20fill%3D%22%2310161a%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E",
        "getValue": [MockFunction],
      },
      "_imageSubRegion": undefined,
      "_imageSubRegionSubscription": undefined,
      "_imageSubscription": undefined,
      "_pixelOffset": undefined,
      "_pixelOffsetScaleByDistance": undefined,
      "_pixelOffsetScaleByDistanceSubscription": undefined,
      "_pixelOffsetSubscription": undefined,
      "_rotation": undefined,
      "_rotationSubscription": undefined,
      "_scale": Object {
        "_value": 0.192,
        "getValue": [MockFunction],
      },
      "_scaleByDistance": undefined,
      "_scaleByDistanceSubscription": undefined,
      "_scaleSubscription": undefined,
      "_show": undefined,
      "_showSubscription": undefined,
      "_sizeInMeters": undefined,
      "_sizeInMetersSubscription": undefined,
      "_translucencyByDistance": undefined,
      "_translucencyByDistanceSubscription": undefined,
      "_verticalOrigin": Object {
        "_value": 0,
        "getValue": [MockFunction],
      },
      "_verticalOriginSubscription": undefined,
      "_width": undefined,
      "_widthSubscription": undefined,
    },
    "_billboardSubscription": [Function],
    "_box": undefined,
    "_boxSubscription": undefined,
    "_children": Array [],
    "_corridor": undefined,
    "_corridorSubscription": undefined,
    "_cylinder": undefined,
    "_cylinderSubscription": undefined,
    "_definitionChanged": Event {
      "_insideRaiseEvent": false,
      "_listeners": Array [],
      "_scopes": Array [],
      "_toRemove": Array [],
    },
    "_description": undefined,
    "_descriptionSubscription": undefined,
    "_ellipse": undefined,
    "_ellipseSubscription": undefined,
    "_ellipsoid": undefined,
    "_ellipsoidSubscription": undefined,
    "_id": "mockId",
    "_label": Object {
      "_value": Object {
        "backgroundColor": Object {
          "alpha": 0,
        },
        "distanceDisplayCondition": Object {
          "_value": mockConstructor {},
          "getValue": [MockFunction],
        },
        "eyeOffset": Cartesian3 {
          "x": 0,
          "y": 0,
          "z": -10,
        },
        "fillColor": "0000",
        "font": "14px undefined",
        "outlineColor": Object {
          "withAlpha": [MockFunction],
        },
        "outlineWidth": 2,
        "pixelOffset": Object {
          "_value": Cartesian2 {
            "x": 0,
            "y": 12,
          },
          "getValue": [MockFunction],
        },
        "showBackground": true,
        "style": Object {
          "_value": 0,
          "getValue": [MockFunction],
        },
        "text": "00:00:00.000",
        "verticalOrigin": Object {
          "_value": 0,
          "getValue": [MockFunction],
        },
      },
      "getValue": [MockFunction],
    },
    "_labelSubscription": undefined,
    "_model": undefined,
    "_modelSubscription": undefined,
    "_name": "mockId",
    "_orientation": undefined,
    "_orientationSubscription": undefined,
    "_parent": undefined,
    "_path": undefined,
    "_pathSubscription": undefined,
    "_plane": undefined,
    "_planeSubscription": undefined,
    "_point": undefined,
    "_pointSubscription": undefined,
    "_polygon": undefined,
    "_polygonSubscription": undefined,
    "_polyline": undefined,
    "_polylineSubscription": undefined,
    "_polylineVolume": undefined,
    "_polylineVolumeSubscription": undefined,
    "_position": ConstantPositionProperty {
      "_definitionChanged": Event {
        "_insideRaiseEvent": false,
        "_listeners": Array [
          [Function],
        ],
        "_scopes": Array [
          [Circular],
        ],
        "_toRemove": Array [],
      },
      "_referenceFrame": 0,
      "_value": Cartesian3 {
        "x": 6373287.279502436,
        "y": 222560.0959921925,
        "z": 110568.77482456663,
      },
    },
    "_positionSubscription": [Function],
    "_properties": PropertyBag {
      "_definitionChanged": Event {
        "_insideRaiseEvent": false,
        "_listeners": Array [
          [Function],
        ],
        "_scopes": Array [
          [Circular],
        ],
        "_toRemove": Array [],
      },
      "_event": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": false,
        "_hasEquals": false,
        "_value": Object {
          "activeAnalysts": Array [
            "mockAnalystOne",
            "mockAnalystTwo",
          ],
          "confidenceSemiMajorAxis": 4,
          "confidenceSemiMinorAxis": 5,
          "conflict": false,
          "coverageSemiMajorAxis": 6,
          "coverageSemiMajorAxisTrend": 8,
          "coverageSemiMinorAxis": 7,
          "depthKm": 3,
          "edgeEventType": "After",
          "id": "mockId",
          "isOpen": false,
          "latitudeDegrees": 1,
          "longitudeDegrees": 2,
          "magnitudeMb": 9,
          "magnitudeMl": 11,
          "magnitudeMs": 10,
          "preferred": "mockPreferred",
          "region": "mockRegion",
          "rejected": "False",
          "status": "NOT_COMPLETE",
          "time": 0,
        },
      },
      "_eventSubscription": [Function],
      "_id": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": false,
        "_hasEquals": false,
        "_value": "mockId",
      },
      "_idSubscription": [Function],
      "_propertyNames": Array [
        "id",
        "type",
        "event",
      ],
      "_type": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": false,
        "_hasEquals": false,
        "_value": "Event location",
      },
      "_typeSubscription": [Function],
    },
    "_propertiesSubscription": [Function],
    "_propertyNames": Array [
      "billboard",
      "box",
      "corridor",
      "cylinder",
      "description",
      "ellipse",
      "ellipsoid",
      "label",
      "model",
      "tileset",
      "orientation",
      "path",
      "plane",
      "point",
      "polygon",
      "polyline",
      "polylineVolume",
      "position",
      "properties",
      "rectangle",
      "viewFrom",
      "wall",
    ],
    "_rectangle": undefined,
    "_rectangleSubscription": undefined,
    "_show": true,
    "_tileset": undefined,
    "_tilesetSubscription": undefined,
    "_viewFrom": undefined,
    "_viewFromSubscription": undefined,
    "_wall": undefined,
    "_wallSubscription": undefined,
    "entityCollection": undefined,
  },
]
`;

exports[`Create Ian Entities createBeforeEventLocationEntities creates entities 1`] = `
Array [
  Entity {
    "_availability": undefined,
    "_billboard": BillboardGraphics {
      "_alignedAxis": undefined,
      "_alignedAxisSubscription": undefined,
      "_color": Object {
        "_value": Object {
          "alpha": 0,
        },
        "getValue": [MockFunction],
      },
      "_colorSubscription": undefined,
      "_definitionChanged": Event {
        "_insideRaiseEvent": false,
        "_listeners": Array [
          [Function],
        ],
        "_scopes": Array [
          [Circular],
        ],
        "_toRemove": Array [],
      },
      "_disableDepthTestDistance": undefined,
      "_disableDepthTestDistanceSubscription": undefined,
      "_distanceDisplayCondition": undefined,
      "_distanceDisplayConditionSubscription": undefined,
      "_eyeOffset": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": true,
        "_hasEquals": true,
        "_value": Cartesian3 {
          "x": 0,
          "y": 0,
          "z": -11,
        },
      },
      "_eyeOffsetSubscription": [Function],
      "_height": undefined,
      "_heightReference": undefined,
      "_heightReferenceSubscription": undefined,
      "_heightSubscription": undefined,
      "_horizontalOrigin": Object {
        "_value": 0,
        "getValue": [MockFunction],
      },
      "_horizontalOriginSubscription": undefined,
      "_image": Object {
        "_value": "data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20id%3D%22selected_event_circle%22%20data-name%3D%22Selected%20Event%20Circle%22%20width%3D%22168%22%20height%3D%22168%22%20viewBox%3D%220%200%20168%20168%22%3E%3Cdefs%3E%3Cfilter%20id%3D%22Ellipse_69%22%20x%3D%220%22%20y%3D%220%22%20width%3D%22168%22%20height%3D%22168%22%20filterUnits%3D%22userSpaceOnUse%22%3E%3CfeOffset%20dy%3D%228%22%3E%3C%2FfeOffset%3E%3CfeGaussianBlur%20stdDeviation%3D%226%22%20result%3D%22blur%22%3E%3C%2FfeGaussianBlur%3E%3CfeFlood%20flood-opacity%3D%220.596%22%3E%3C%2FfeFlood%3E%3CfeComposite%20operator%3D%22in%22%20in2%3D%22blur%22%3E%3C%2FfeComposite%3E%3CfeComposite%20in%3D%22SourceGraphic%22%3E%3C%2FfeComposite%3E%3C%2Ffilter%3E%3C%2Fdefs%3E%3Cg%20id%3D%22Group_704%22%20data-name%3D%22Group%20704%22%20transform%3D%22translate(-1045%20-425)%22%3E%3Cg%20id%3D%22Group_705%22%20data-name%3D%22Group%20705%22%20transform%3D%22translate(1063%20435)%22%3E%3Cg%20transform%3D%22matrix(1%2C%200%2C%200%2C%201%2C%20-18%2C%20-10)%22%20filter%3D%22url(%23Ellipse_69)%22%3E%3Ccircle%20id%3D%22Ellipse_69-2%22%20data-name%3D%22Ellipse%2069%22%20cx%3D%2266%22%20cy%3D%2266%22%20r%3D%2266%22%20transform%3D%22translate(18%2010)%22%20fill%3D%22%234087cb%22%20style%3D%22fill-opacity%3A0.35%22%3E%3C%2Fcircle%3E%3C%2Fg%3E%3Cg%20id%3D%22Group_706%22%20data-name%3D%22Group%20706%22%20transform%3D%22translate(14.839%2014.839)%22%3E%3Ccircle%20id%3D%22Ellipse_70%22%20data-name%3D%22Ellipse%2070%22%20cx%3D%2247%22%20cy%3D%2247%22%20r%3D%2247%22%20transform%3D%22translate(4.161%204.161)%22%20fill%3D%22%23fff%22%20style%3D%22fill-opacity%3A0.35%3Bstroke-opacity%3A0.35%22%3E%3C%2Fcircle%3E%3Cpath%20id%3D%22Ellipse_70_-_Outline%22%20data-name%3D%22Ellipse%2070%20-%20Outline%22%20d%3D%22M51.111%2C10.222A40.888%2C40.888%2C0%2C1%2C0%2C92%2C51.111%2C40.935%2C40.935%2C0%2C0%2C0%2C51.111%2C10.222M51.111%2C0A51.111%2C51.111%2C0%2C1%2C1%2C0%2C51.111%2C51.111%2C51.111%2C0%2C0%2C1%2C51.111%2C0Z%22%20transform%3D%22translate(0%200)%22%20fill%3D%22%2310161a%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E",
        "getValue": [MockFunction],
      },
      "_imageSubRegion": undefined,
      "_imageSubRegionSubscription": undefined,
      "_imageSubscription": undefined,
      "_pixelOffset": undefined,
      "_pixelOffsetScaleByDistance": undefined,
      "_pixelOffsetScaleByDistanceSubscription": undefined,
      "_pixelOffsetSubscription": undefined,
      "_rotation": undefined,
      "_rotationSubscription": undefined,
      "_scale": Object {
        "_value": 0.192,
        "getValue": [MockFunction],
      },
      "_scaleByDistance": undefined,
      "_scaleByDistanceSubscription": undefined,
      "_scaleSubscription": undefined,
      "_show": undefined,
      "_showSubscription": undefined,
      "_sizeInMeters": undefined,
      "_sizeInMetersSubscription": undefined,
      "_translucencyByDistance": undefined,
      "_translucencyByDistanceSubscription": undefined,
      "_verticalOrigin": Object {
        "_value": 0,
        "getValue": [MockFunction],
      },
      "_verticalOriginSubscription": undefined,
      "_width": undefined,
      "_widthSubscription": undefined,
    },
    "_billboardSubscription": [Function],
    "_box": undefined,
    "_boxSubscription": undefined,
    "_children": Array [],
    "_corridor": undefined,
    "_corridorSubscription": undefined,
    "_cylinder": undefined,
    "_cylinderSubscription": undefined,
    "_definitionChanged": Event {
      "_insideRaiseEvent": false,
      "_listeners": Array [],
      "_scopes": Array [],
      "_toRemove": Array [],
    },
    "_description": undefined,
    "_descriptionSubscription": undefined,
    "_ellipse": undefined,
    "_ellipseSubscription": undefined,
    "_ellipsoid": undefined,
    "_ellipsoidSubscription": undefined,
    "_id": "mockId",
    "_label": Object {
      "_value": Object {
        "backgroundColor": Object {
          "alpha": 0,
        },
        "distanceDisplayCondition": Object {
          "_value": mockConstructor {},
          "getValue": [MockFunction],
        },
        "eyeOffset": Cartesian3 {
          "x": 0,
          "y": 0,
          "z": -10,
        },
        "fillColor": "0000",
        "font": "14px undefined",
        "outlineColor": Object {
          "withAlpha": [MockFunction],
        },
        "outlineWidth": 2,
        "pixelOffset": Object {
          "_value": Cartesian2 {
            "x": 0,
            "y": 12,
          },
          "getValue": [MockFunction],
        },
        "showBackground": true,
        "style": Object {
          "_value": 0,
          "getValue": [MockFunction],
        },
        "text": "00:00:00.000",
        "verticalOrigin": Object {
          "_value": 0,
          "getValue": [MockFunction],
        },
      },
      "getValue": [MockFunction],
    },
    "_labelSubscription": undefined,
    "_model": undefined,
    "_modelSubscription": undefined,
    "_name": "mockId",
    "_orientation": undefined,
    "_orientationSubscription": undefined,
    "_parent": undefined,
    "_path": undefined,
    "_pathSubscription": undefined,
    "_plane": undefined,
    "_planeSubscription": undefined,
    "_point": undefined,
    "_pointSubscription": undefined,
    "_polygon": undefined,
    "_polygonSubscription": undefined,
    "_polyline": undefined,
    "_polylineSubscription": undefined,
    "_polylineVolume": undefined,
    "_polylineVolumeSubscription": undefined,
    "_position": ConstantPositionProperty {
      "_definitionChanged": Event {
        "_insideRaiseEvent": false,
        "_listeners": Array [
          [Function],
        ],
        "_scopes": Array [
          [Circular],
        ],
        "_toRemove": Array [],
      },
      "_referenceFrame": 0,
      "_value": Cartesian3 {
        "x": 6373287.279502436,
        "y": 222560.0959921925,
        "z": 110568.77482456663,
      },
    },
    "_positionSubscription": [Function],
    "_properties": PropertyBag {
      "_definitionChanged": Event {
        "_insideRaiseEvent": false,
        "_listeners": Array [
          [Function],
        ],
        "_scopes": Array [
          [Circular],
        ],
        "_toRemove": Array [],
      },
      "_event": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": false,
        "_hasEquals": false,
        "_value": Object {
          "activeAnalysts": Array [
            "mockAnalystOne",
            "mockAnalystTwo",
          ],
          "confidenceSemiMajorAxis": 4,
          "confidenceSemiMinorAxis": 5,
          "conflict": false,
          "coverageSemiMajorAxis": 6,
          "coverageSemiMinorAxis": 7,
          "depthKm": 3,
          "edgeEventType": "Before",
          "id": "mockId",
          "isOpen": false,
          "latitudeDegrees": 1,
          "longitudeDegrees": 2,
          "magnitudeMb": 8,
          "magnitudeMl": 10,
          "magnitudeMs": 9,
          "preferred": "mockPreferred",
          "region": "mockRegion",
          "rejected": "False",
          "status": "NOT_COMPLETE",
          "time": 0,
        },
      },
      "_eventSubscription": [Function],
      "_id": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": false,
        "_hasEquals": false,
        "_value": "mockId",
      },
      "_idSubscription": [Function],
      "_propertyNames": Array [
        "id",
        "type",
        "event",
      ],
      "_type": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": false,
        "_hasEquals": false,
        "_value": "Event location",
      },
      "_typeSubscription": [Function],
    },
    "_propertiesSubscription": [Function],
    "_propertyNames": Array [
      "billboard",
      "box",
      "corridor",
      "cylinder",
      "description",
      "ellipse",
      "ellipsoid",
      "label",
      "model",
      "tileset",
      "orientation",
      "path",
      "plane",
      "point",
      "polygon",
      "polyline",
      "polylineVolume",
      "position",
      "properties",
      "rectangle",
      "viewFrom",
      "wall",
    ],
    "_rectangle": undefined,
    "_rectangleSubscription": undefined,
    "_show": true,
    "_tileset": undefined,
    "_tilesetSubscription": undefined,
    "_viewFrom": undefined,
    "_viewFromSubscription": undefined,
    "_wall": undefined,
    "_wallSubscription": undefined,
    "entityCollection": undefined,
  },
]
`;

exports[`Create Ian Entities createIntervalLocationEntities creates entities 1`] = `
Array [
  Entity {
    "_availability": undefined,
    "_billboard": BillboardGraphics {
      "_alignedAxis": undefined,
      "_alignedAxisSubscription": undefined,
      "_color": Object {
        "_value": Object {
          "alpha": 0,
        },
        "getValue": [MockFunction],
      },
      "_colorSubscription": undefined,
      "_definitionChanged": Event {
        "_insideRaiseEvent": false,
        "_listeners": Array [
          [Function],
        ],
        "_scopes": Array [
          [Circular],
        ],
        "_toRemove": Array [],
      },
      "_disableDepthTestDistance": undefined,
      "_disableDepthTestDistanceSubscription": undefined,
      "_distanceDisplayCondition": undefined,
      "_distanceDisplayConditionSubscription": undefined,
      "_eyeOffset": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": true,
        "_hasEquals": true,
        "_value": Cartesian3 {
          "x": 0,
          "y": 0,
          "z": -11,
        },
      },
      "_eyeOffsetSubscription": [Function],
      "_height": undefined,
      "_heightReference": undefined,
      "_heightReferenceSubscription": undefined,
      "_heightSubscription": undefined,
      "_horizontalOrigin": Object {
        "_value": 0,
        "getValue": [MockFunction],
      },
      "_horizontalOriginSubscription": undefined,
      "_image": Object {
        "_value": "data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20id%3D%22selected_event_circle%22%20data-name%3D%22Selected%20Event%20Circle%22%20width%3D%22168%22%20height%3D%22168%22%20viewBox%3D%220%200%20168%20168%22%3E%3Cdefs%3E%3Cfilter%20id%3D%22Ellipse_69%22%20x%3D%220%22%20y%3D%220%22%20width%3D%22168%22%20height%3D%22168%22%20filterUnits%3D%22userSpaceOnUse%22%3E%3CfeOffset%20dy%3D%228%22%3E%3C%2FfeOffset%3E%3CfeGaussianBlur%20stdDeviation%3D%226%22%20result%3D%22blur%22%3E%3C%2FfeGaussianBlur%3E%3CfeFlood%20flood-opacity%3D%220.596%22%3E%3C%2FfeFlood%3E%3CfeComposite%20operator%3D%22in%22%20in2%3D%22blur%22%3E%3C%2FfeComposite%3E%3CfeComposite%20in%3D%22SourceGraphic%22%3E%3C%2FfeComposite%3E%3C%2Ffilter%3E%3C%2Fdefs%3E%3Cg%20id%3D%22Group_704%22%20data-name%3D%22Group%20704%22%20transform%3D%22translate(-1045%20-425)%22%3E%3Cg%20id%3D%22Group_705%22%20data-name%3D%22Group%20705%22%20transform%3D%22translate(1063%20435)%22%3E%3Cg%20transform%3D%22matrix(1%2C%200%2C%200%2C%201%2C%20-18%2C%20-10)%22%20filter%3D%22url(%23Ellipse_69)%22%3E%3Ccircle%20id%3D%22Ellipse_69-2%22%20data-name%3D%22Ellipse%2069%22%20cx%3D%2266%22%20cy%3D%2266%22%20r%3D%2266%22%20transform%3D%22translate(18%2010)%22%20fill%3D%22%234087cb%22%20style%3D%22fill-opacity%3A1%22%3E%3C%2Fcircle%3E%3C%2Fg%3E%3Cg%20id%3D%22Group_706%22%20data-name%3D%22Group%20706%22%20transform%3D%22translate(14.839%2014.839)%22%3E%3Ccircle%20id%3D%22Ellipse_70%22%20data-name%3D%22Ellipse%2070%22%20cx%3D%2247%22%20cy%3D%2247%22%20r%3D%2247%22%20transform%3D%22translate(4.161%204.161)%22%20fill%3D%22%23fff%22%20style%3D%22fill-opacity%3A1%3Bstroke-opacity%3A1%22%3E%3C%2Fcircle%3E%3Cpath%20id%3D%22Ellipse_70_-_Outline%22%20data-name%3D%22Ellipse%2070%20-%20Outline%22%20d%3D%22M51.111%2C10.222A40.888%2C40.888%2C0%2C1%2C0%2C92%2C51.111%2C40.935%2C40.935%2C0%2C0%2C0%2C51.111%2C10.222M51.111%2C0A51.111%2C51.111%2C0%2C1%2C1%2C0%2C51.111%2C51.111%2C51.111%2C0%2C0%2C1%2C51.111%2C0Z%22%20transform%3D%22translate(0%200)%22%20fill%3D%22%2310161a%22%3E%3C%2Fpath%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E",
        "getValue": [MockFunction],
      },
      "_imageSubRegion": undefined,
      "_imageSubRegionSubscription": undefined,
      "_imageSubscription": undefined,
      "_pixelOffset": undefined,
      "_pixelOffsetScaleByDistance": undefined,
      "_pixelOffsetScaleByDistanceSubscription": undefined,
      "_pixelOffsetSubscription": undefined,
      "_rotation": undefined,
      "_rotationSubscription": undefined,
      "_scale": Object {
        "_value": 0.192,
        "getValue": [MockFunction],
      },
      "_scaleByDistance": undefined,
      "_scaleByDistanceSubscription": undefined,
      "_scaleSubscription": undefined,
      "_show": undefined,
      "_showSubscription": undefined,
      "_sizeInMeters": undefined,
      "_sizeInMetersSubscription": undefined,
      "_translucencyByDistance": undefined,
      "_translucencyByDistanceSubscription": undefined,
      "_verticalOrigin": Object {
        "_value": 0,
        "getValue": [MockFunction],
      },
      "_verticalOriginSubscription": undefined,
      "_width": undefined,
      "_widthSubscription": undefined,
    },
    "_billboardSubscription": [Function],
    "_box": undefined,
    "_boxSubscription": undefined,
    "_children": Array [],
    "_corridor": undefined,
    "_corridorSubscription": undefined,
    "_cylinder": undefined,
    "_cylinderSubscription": undefined,
    "_definitionChanged": Event {
      "_insideRaiseEvent": false,
      "_listeners": Array [],
      "_scopes": Array [],
      "_toRemove": Array [],
    },
    "_description": undefined,
    "_descriptionSubscription": undefined,
    "_ellipse": undefined,
    "_ellipseSubscription": undefined,
    "_ellipsoid": undefined,
    "_ellipsoidSubscription": undefined,
    "_id": "mockId",
    "_label": Object {
      "_value": Object {
        "backgroundColor": Object {
          "alpha": 0,
        },
        "distanceDisplayCondition": Object {
          "_value": mockConstructor {},
          "getValue": [MockFunction],
        },
        "eyeOffset": Cartesian3 {
          "x": 0,
          "y": 0,
          "z": -10,
        },
        "fillColor": "0000",
        "font": "14px undefined",
        "outlineColor": Object {
          "withAlpha": [MockFunction],
        },
        "outlineWidth": 2,
        "pixelOffset": Object {
          "_value": Cartesian2 {
            "x": 0,
            "y": 12,
          },
          "getValue": [MockFunction],
        },
        "showBackground": true,
        "style": Object {
          "_value": 0,
          "getValue": [MockFunction],
        },
        "text": "00:00:00.000",
        "verticalOrigin": Object {
          "_value": 0,
          "getValue": [MockFunction],
        },
      },
      "getValue": [MockFunction],
    },
    "_labelSubscription": undefined,
    "_model": undefined,
    "_modelSubscription": undefined,
    "_name": "mockId",
    "_orientation": undefined,
    "_orientationSubscription": undefined,
    "_parent": undefined,
    "_path": undefined,
    "_pathSubscription": undefined,
    "_plane": undefined,
    "_planeSubscription": undefined,
    "_point": undefined,
    "_pointSubscription": undefined,
    "_polygon": undefined,
    "_polygonSubscription": undefined,
    "_polyline": undefined,
    "_polylineSubscription": undefined,
    "_polylineVolume": undefined,
    "_polylineVolumeSubscription": undefined,
    "_position": ConstantPositionProperty {
      "_definitionChanged": Event {
        "_insideRaiseEvent": false,
        "_listeners": Array [
          [Function],
        ],
        "_scopes": Array [
          [Circular],
        ],
        "_toRemove": Array [],
      },
      "_referenceFrame": 0,
      "_value": Cartesian3 {
        "x": 6373287.279502436,
        "y": 222560.0959921925,
        "z": 110568.77482456663,
      },
    },
    "_positionSubscription": [Function],
    "_properties": PropertyBag {
      "_definitionChanged": Event {
        "_insideRaiseEvent": false,
        "_listeners": Array [
          [Function],
        ],
        "_scopes": Array [
          [Circular],
        ],
        "_toRemove": Array [],
      },
      "_event": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": false,
        "_hasEquals": false,
        "_value": Object {
          "activeAnalysts": Array [
            "mockAnalystOne",
            "mockAnalystTwo",
          ],
          "confidenceSemiMajorAxis": 4,
          "confidenceSemiMinorAxis": 5,
          "conflict": false,
          "coverageSemiMajorAxis": 6,
          "coverageSemiMinorAxis": 7,
          "depthKm": 3,
          "edgeEventType": "Interval",
          "id": "mockId",
          "isOpen": false,
          "latitudeDegrees": 1,
          "longitudeDegrees": 2,
          "magnitudeMb": 8,
          "magnitudeMl": 10,
          "magnitudeMs": 9,
          "preferred": "mockPreferred",
          "region": "mockRegion",
          "rejected": "False",
          "status": "NOT_COMPLETE",
          "time": 0,
        },
      },
      "_eventSubscription": [Function],
      "_id": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": false,
        "_hasEquals": false,
        "_value": "mockId",
      },
      "_idSubscription": [Function],
      "_propertyNames": Array [
        "id",
        "type",
        "event",
      ],
      "_type": ConstantProperty {
        "_definitionChanged": Event {
          "_insideRaiseEvent": false,
          "_listeners": Array [
            [Function],
          ],
          "_scopes": Array [
            [Circular],
          ],
          "_toRemove": Array [],
        },
        "_hasClone": false,
        "_hasEquals": false,
        "_value": "Event location",
      },
      "_typeSubscription": [Function],
    },
    "_propertiesSubscription": [Function],
    "_propertyNames": Array [
      "billboard",
      "box",
      "corridor",
      "cylinder",
      "description",
      "ellipse",
      "ellipsoid",
      "label",
      "model",
      "tileset",
      "orientation",
      "path",
      "plane",
      "point",
      "polygon",
      "polyline",
      "polylineVolume",
      "position",
      "properties",
      "rectangle",
      "viewFrom",
      "wall",
    ],
    "_rectangle": undefined,
    "_rectangleSubscription": undefined,
    "_show": true,
    "_tileset": undefined,
    "_tilesetSubscription": undefined,
    "_viewFrom": undefined,
    "_viewFromSubscription": undefined,
    "_wall": undefined,
    "_wallSubscription": undefined,
    "entityCollection": undefined,
  },
]
`;
